--- a/lana/pass-landing.html
+++ b/lana/pass-landing.html
@@ -22,18 +22,7 @@
     .pattern-demo {
       padding: 19px;
     }
-    /* Temporary workaround for Choose Canada thématique */
-    /* Last modified: 2025-03-27 */
-    .choose-canada-banner{
-
-    background-image: url('');
-
-    .well{background-image:linear-gradient(to right,#8C0D13,#BB1119) ;
-
-    border:0;border-radius:0;color:#fff;margin-bottom:0;padding:15px;position:relative;&::before{content:"";position:absolute;top:0;right:100%;bottom:0;width:9999px;background-image:linear-gradient(to right,#BB1119,#8C0D13)}h1#wb-cont{border-bottom-color:#fff;border-image-source:linear-gradient(to right,#fff 71px,transparent 71px);margin-top:10px}}}.choose-canada-card{border-radius:18px;box-shadow:0 3px 6px #00000029;margin-bottom:1.5em!important;overflow:hidden;position:relative;.card-body{padding:20px}.card-title{font-size:1.2em;margin-bottom:.75em;margin-top:0!important}}
-
   </style>
-
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-105628416-2"></script>
@@ -128,93 +117,154 @@
       </div>
     </nav>
   </header>
-  <main role="main" property="mainContentOfPage" class="wb-prettify all-pre">
-    <div class="container">
-      <h1 property="name" id="wb-cont" dir="ltr">About the Canada Strong Pass</h1>
-      <p class="lead"><mark>Enjoy</mark> free or discounted admission as <mark>you</mark> make Canada <mark>your</mark> travel destination this summer.</p>
+  <main property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement">
+
+         <div class="reference parbase section"><div class="cq-dd-paragraph"><div class="mwsmediaplayer_914243444 mwsmediaplayer">
+
+ <style>
+/* Temporary workaround for Choose Canada thématique */
+/* Last modified: 2025-03-27 */
+.choose-canada-banner{
+
+background-image: url('');
+
+.well{background-image:linear-gradient(to right,#8C0D13,#BB1119) ;
+
+border:0;border-radius:0;color:#fff;margin-bottom:0;padding:15px;position:relative;&::before{content:"";position:absolute;top:0;right:100%;bottom:0;width:9999px;background-image:linear-gradient(to right,#BB1119,#8C0D13)}h1#wb-cont{border-bottom-color:#fff;border-image-source:linear-gradient(to right,#fff 71px,transparent 71px);margin-top:10px}}}.choose-canada-card{border-radius:18px;box-shadow:0 3px 6px #00000029;margin-bottom:1.5em!important;overflow:hidden;position:relative;.card-body{padding:20px}.card-title{font-size:1.2em;margin-bottom:.75em;margin-top:0!important}}
+</style>
+
+</div>
+</div>
+</div>
+<div class="mwsgeneric-base-html parbase section">
 
 
 
+   <div class="bg-cover bg-center choose-canada-banner" data-bgimg-srcset="/content/dam/pch/images/campaigns/canada-pass/canada-pass-1920x315.jpg 1920w, https://wet-boew.github.io/vocab/wb/utilities#no-image 767w">
+ <div class="container p-0">
+   <div class="well header-rwd">
+     <h1 property="name" id="wb-cont" dir="ltr">Canada Strong Pass</h1>
+     <p>Have the most Canadian summer!</p>
+     <p>Enjoy <strong>free</strong> or <strong>discounted</strong> admissions as you make Canada your travel destination.</p>
+   </div>
+ </div>
+</div>
 
-        <div class="col-sm-12">
-          <section class="choose-canada-card mb-4">
-            <div class="card-body">
-              <h2 class="card-title mt-2">Valid from June 20 to September 2, 2025</h2>
-              <ul>
-               <li><strong>Completely free</strong> - No cost, no purchase required, no sign-up needed</li>
-               <li><strong>No physical pass</strong> - Simply show up at participating locations</li>
-               <li><strong>For everyone</strong> - All visitors automatically eligible</li>
-                 <li><strong>Benefits</strong> - Free admission or discounts</li>
-              </ul>
-            </div>
-          </section>
-        </div>
 
-<h2 id="a"><mark>What's included in the Pass</mark></h2>
-      <p>The <a href="/en/canadian-heritage/campaigns/canada-pass.html">Canada Strong Pass</a> celebrates what unites us—our shared experiences, natural wonders, and cultural richness.</p>
-      <p>The Pass is about making it easier for everyone—especially youth and families—to explore Canada and celebrate what makes this country extraordinary.</p>
-      <p>The Pass includes:</p>
-      <mark>Added anchor links</mark>
-      <ul>
-        <li><strong><a href="#a2">Parks Canada:</a></strong> Free admission for all visitors to national parks, national historic sites, and national marine conservation areas administered by Parks Canada and a 25% discount on camping fees.</li>
-        <li><strong><a href="#a3">National museums and the Plains of Abraham Museum:</a></strong> Free admission for children and teens aged 17 and under and a 50% discount for young adults aged 18 to 24.</li>
-        <li><strong><a href="#a4">VIA Rail:</a></strong> Free travel for children aged 17 and under when accompanied by an adult and a 25% discount for young adults aged 18 to 24.</li>
-        <li><strong><a href="#a5">Participating provincial and territorial museums and galleries</a></strong>: Free admission for children and a 50% discount for young adults aged 18 to 24.</li>
-      </ul>
-      <h2 id="a1">Using the Pass</h2>
-      <p>Here are some details on using the Pass:</p>
-      <ul>
-        <li>The Pass is available to all visitors, whether you live in Canada or come from abroad. It’s an invitation to experience Canada’s cultural and natural richness.</li>
-        <li>There is no physical or virtual pass to present for these savings. Just show up at participating sites to enjoy the free admission or discounts. Some activities may require reservations. Visit the websites of participating sites for more information.</li>
-        <li>The discounts cover admission only, but some participating sites may include guided tours or offer special rates — check with them directly.</li>
-        <li>You can take advantage of the Pass offers as many times as you like during the summer period, from June 20 to September 2, 2025 (inclusively).</li>
-        <li>Participating sites may not be able to accommodate everyone due to space limits. Please check with them directly before planning your visit.</li>
-        <li>These discounts may not be combined with other promotions unless noted by participating partners.</li>
-      </ul>
-      <h2 id="a2">Parks Canada visits and overnight stays</h2>
-      <p>The Pass offers free admission to all national historic sites, national parks, and national marine conservation areas administered by Parks Canada.</p>
-      <p>It also includes discounted rates on camping, roofed accommodation and historic stays with Parks Canada.</p>
-      <p>Here are some details:</p>
-      <ul>
-        <li>This does not include provincial, municipal and private parks.</li>
-        <li>Some Parks Canada locations are operated by third parties, and visitors will be required to pay applicable fees.</li>
-        <li>Visitors are encouraged to visit <a href="http://www.pc.gc.ca/eng/voyage-travel/admission.aspx">the full list of Parks Canada administered sites</a> before their visit to avoid disappointment.</li>
-        <li><a href="https://parks.canada.ca/voyage-travel/conseils-tips/choisis-canada-choose/admission-camping">Parks Canada Discovery Passes</a> already purchased and valid for the months of June, July and August 2025 will be extended for an additional three months.</li>
-      </ul>
-      <p>Visit the <a href="https://parks.canada.ca/voyage-travel/conseils-tips/choisis-canada-choose/admission-camping#camping">Parks Canada website</a> for more information.</p>
-      <h3>Refunds for prior reservations</h3>
-      <p>If you previously booked and paid for a Parks Canada  campsite between June 20 and September 2, you will receive an email with more information on the process to receive your prorated refund as your reservation date approaches. Communicate directly with <a href="https://parks.canada.ca/agence-agency/courriel-email">Parks Canada</a> to get more details.</p>
-      <h2 id="a3">Admission to national museums</h2>
-      <p>All <a href="/en/canadian-heritage/campaigns/canada-pass/museums-galleries.html">national museums</a> offer free admission for children and teens aged 17 and under, and 50% off admission fees for youth aged 18 to 24.</p>
-      <p>Here are some details:</p>
-      <ul>
-        <li>These savings apply to general admission. Tickets can be purchased or reserved online and in person.</li>
-        <li>Time-ticketed exhibitions and&nbsp;fees regularly applied to special events, programs and experiences remain in effect and are not included&nbsp;(e.g., summer camps or facilitated group visits).</li>
-        <li>If you had planned to visit one of the participating national museums this summer and had booked a ticket for children 17 and under and/or 18-24 years old, you will be reimbursed accordingly.</li>
-        <li>Participating museums reserve the right to request proof of age upon admission.</li>
-      </ul>
-      <p>For more information on family packages or membership prices, please consult each museum website.</p>
-      <h2 id="a4">VIA Rail travel</h2>
-      <p>The pass offers free travel for children aged 17 and under when accompanied by an adult and a 25% discount for young adults aged 18 to 24.</p>
-      <p>Visit the <a href="https://www.viarail.ca/en/offers/fares-and-packages">VIA Rail</a> website for more information on free and discounted travel with the Canada Strong Pass.</p>
-      <p>For information regarding reimbursement of previously bought tickets, VIA Rail’s capacity or summer travel plans, we recommend reaching out to <a href="https://www.viarail.ca/en/contact-us">VIA Rail</a> directly.</p>
-      <h2 id="a5">Participating provincial and territorial museums and galleries</h2>
-      <p>There will be many participating provincial and territorial museums and galleries across the country. It’s a good idea to check directly with each site before planning your visit.</p>
-    </div>
+</div>
+<div class="mwsgeneric-base-html parbase section">
 
 
 
-    </div>
-    <!-- END PAGE FEEDBACK WIDGET -->
-    <div class="pagedetails container">
+ <div class="container mrgn-tp-lg">
 
-      <dl id="wb-dtmd">
-        <dt>Date modified:</dt>
-        <dd><time property="dateModified">2021-07-25</time></dd>
-      </dl>
-    </div>
+ <p>Enjoy free or discounted admission to some of the country’s most iconic places. The Canada Strong Pass lets you explore the richness of the country — from museums to nature to railroads.</p>
+ 
 
-  </main>
+ <div class="row wb-eqht-grd mrgn-tp-lg">
+
+ <div class="col-sm-12">
+   <section class="choose-canada-card mb-4">
+     <div class="card-body">
+     <h2 class="card-title mt-2">Valid from June 20 to September 2, 2025</h2>
+     <ul>
+      <li><strong>Completely free</strong> - No cost, no purchase required, no sign-up needed</li>
+      <li><strong>No physical pass</strong> - Simply show up at participating locations</li>
+      <li><strong>For everyone</strong> - All visitors automatically eligible</li>
+        <li><strong>Benefits</strong> - Free admission or discounts</li>
+     </ul>
+     <p><a href="/en/canadian-heritage/campaigns/canada-pass/about.html#wb-cont">Learn more about the pass</a></p>
+       </div>
+   </section>
+ </div>
+
+
+   <div class="col-sm-6">
+     <section class="choose-canada-card mb-4"> <img src="/content/dam/pch/images/campaigns/canada-pass/cp-free-admission-555x203.jpg" alt="" class="img-responsive full-width">
+       <div class="card-body">
+         <h2 class="card-title mt-2"><a href="https://parks.canada.ca/voyage-travel/conseils-tips/choisis-canada-choose/admission-camping#admission" class="stretched-link">Free admission with Parks Canada</a></h2>
+         <p>Explore national parks, national historic sites and national marine conservation areas.</p>
+       </div>
+     </section>
+   </div>
+   <div class="col-sm-6">
+     <section class="choose-canada-card mb-4"> <img src="/content/dam/pch/images/campaigns/canada-pass/cp-discounts-overnight-555x203.jpg" alt="" class="img-responsive full-width">
+       <div class="card-body">
+         <h2 class="card-title mt-2"><a href="https://parks.canada.ca/voyage-travel/conseils-tips/choisis-canada-choose/admission-camping#camping" class="stretched-link">Discounts on overnight stays with Parks Canada</a></h2>
+         <p>Enjoy discounted rates on camping, roofed accommodations and historic stays.</p>
+       </div>
+     </section>
+   </div>
+   <div class="col-sm-6">
+     <section class="choose-canada-card mb-4"> <img src="/content/dam/pch/images/campaigns/canada-pass/cp-museums-555x203.jpg" alt="" class="img-responsive full-width">
+       <div class="card-body">
+         <h2 class="card-title mt-2"><a href="/en/canadian-heritage/campaigns/canada-pass/museums-galleries.html" class="stretched-link" dir="ltr">Free or reduced admission at museums and galleries</a></h2>
+         <p>This summer, visit participating museums and galleries across the country. Visit the websites of each participating museum and gallery to find out about free admission and discounts for children and youth.</p>
+       </div>
+     </section>
+   </div>
+   <div class="col-sm-6">
+     <section class="choose-canada-card mb-4"> <img src="/content/dam/pch/images/campaigns/canada-pass/cp-via-rail-555x203.jpg" alt="" class="img-responsive full-width">
+       <div class="card-body">
+         <h2 class="card-title mt-2"><a href="https://www.viarail.ca/canadastrong" class="stretched-link">Free and discounted travel with VIA Rail</a></h2>
+         <p>Children travel free when accompanied by an adult. Passengers aged 18 to 24 benefit from discounted fares on travel across Canada. Conditions apply.</p>
+       </div>
+     </section>
+   </div>
+   <div class="col-sm-12">
+     <section class="choose-canada-card mb-4">
+       <div class="card-body">
+         <h2 class="card-title mt-2"><a href="/en/canadian-heritage/campaigns/canada-pass/about.html" class="stretched-link">About the pass</a></h2>
+         <p>Learn about the Canada Strong Pass details, including eligibility, participating sites, and how to access free and discounted admission.</p>
+       </div>
+     </section>
+   </div>
+ </div>
+</div>
+<div class="container mrgn-tp-lg">
+ <div class="row">
+   <div class="col-md-12">
+     <h2 id="a7" class="mrgn-tp-sm">Related links</h2>
+     <ul>
+       <li><a href="/en/canadian-heritage/campaigns/choose-canada.html">Choose Canada</a></li>
+       <li><a href="https://travel.destinationcanada.com/en-ca">Destination Canada</a></li>
+     </ul>
+   </div>
+ </div>
+ <div class="row">
+   <div class="col-sm-4 mrgn-tp-xl">
+     <section class="gc-followus">
+       <h2>Social media</h2>
+       <ul class="list-inline">
+         <li><a rel="external" class="youtube" href="https://www.youtube.com/user/CdnHeritage"><span class="wb-inv">YouTube: Canadian Heritage</span></a></li>
+         <li><a rel="external" class="facebook" href="http://www.facebook.com/CdnHeritage"><span class="wb-inv">Facebook: Canadian Heritage</span></a></li>
+         <li><a rel="external" class="instagram" href="https://www.instagram.com/cdn.heritage/"><span class="wb-inv">Instagram: Canadian Heritage</span></a></li>
+         <li><a rel="external" class="linkedin" href="https://www.linkedin.com/company/canadian-heritage-patrimoine-canadien"><span class="wb-inv">LinkedIn: Canadian Heritage</span></a></li>
+       </ul>
+     </section>
+   </div>
+ </div>
+</div>
+
+
+</div>
+
+
+         <section class="pagedetails container">
+ <h2 class="wb-inv">Page details</h2>
+ <div class="row">
+     <div class="col-sm-8 col-md-9 col-lg-9">
+         <div class="wb-disable-allow" data-ajax-replace="/etc/designs/canada/wet-boew/assets/feedback/page-feedback-en.html">
+         </div>
+     </div>
+</div>
+     <dl id="wb-dtmd">
+ <dt>Date modified:</dt>
+ <dd><time property="dateModified">2025-06-16</time></dd>
+</dl>
+</section>
+
+     </main>
   <footer id="wb-info">
     <div class="landscape">
       <nav class="container wb-navcurr">
