--- a/lana/pass-landing.html
+++ b/lana/pass-landing.html
@@ -158,8 +158,8 @@ border:0;border-radius:0;color:#fff;margin-bottom:0;padding:15px;position:relati
 
  <div class="container mrgn-tp-lg">
 
- <p>Enjoy free or discounted admission to some of the country’s most iconic places. The Canada Strong Pass lets you explore the richness of the country — from museums to nature to railroads.</p>
- 
+ <p>The Canada Strong Pass lets you explore the richness of the country — from museums to nature to railroads.</p>
+
 
  <div class="row wb-eqht-grd mrgn-tp-lg">
 
