--- a/lana/pass-landing.html
+++ b/lana/pass-landing.html
@@ -168,7 +168,7 @@ border:0;border-radius:0;color:#fff;margin-bottom:0;padding:15px;position:relati
      <div class="card-body">
      <h2 class="card-title mt-2">Valid from June 20 to September 2, 2025</h2>
      <ul>
-      <li><strong>Completely free</strong> - No cost, no purchase required, no sign-up needed</li>
+      <li><strong>The pass is free</strong> - No cost, no purchase required, no sign-up needed</li>
       <li><strong>No physical pass</strong> - Simply show up at participating locations</li>
       <li><strong>For everyone</strong> - All visitors automatically eligible</li>
         <li><strong>Benefits</strong> - Free admission or discounts</li>
