--- a/jmtesting/ILP-secretaries-of-state/sm-imgs-adjustments/ILP-sos-fr.html
+++ b/jmtesting/ILP-secretaries-of-state/sm-imgs-adjustments/ILP-sos-fr.html
@@ -285,7 +285,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">L'honorable [prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x200/000000/FFFFFF.png" alt="Secrétaire d'État prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -298,7 +298,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">L'honorable [prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x200/000000/FFFFFF.png" alt="Secrétaire d'État prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -311,7 +311,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">L'honorable [prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x200/000000/FFFFFF.png" alt="Secrétaire d'État prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -324,7 +324,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">L'honorable [prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x200/000000/FFFFFF.png" alt="Secrétaire d'État prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -337,7 +337,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">L'honorable [prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x200/000000/FFFFFF.png" alt="Secrétaire d'État prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -350,7 +350,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">L'honorable [prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x200/000000/FFFFFF.png" alt="Secrétaire d'État prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -368,7 +368,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">[Secrétaire parlementaire prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x200/000000/FFFFFF.png" alt="Secrétaire parlementaire prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -381,7 +381,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">[Secrétaire parlementaire prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x200/000000/FFFFFF.png" alt="Secrétaire parlementaire prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -394,7 +394,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">[Secrétaire parlementaire prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x200/000000/FFFFFF.png" alt="Secrétaire parlementaire prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -407,7 +407,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">[Secrétaire parlementaire prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x200/000000/FFFFFF.png" alt="Secrétaire parlementaire prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -420,7 +420,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">[Secrétaire parlementaire prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x200/000000/FFFFFF.png" alt="Secrétaire parlementaire prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -433,7 +433,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">[Secrétaire parlementaire prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x200/000000/FFFFFF.png" alt="Secrétaire parlementaire prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
