--- a/jmtesting/ILP-secretaries-of-state/sm-imgs-adjustments/ILP-sos.html
+++ b/jmtesting/ILP-secretaries-of-state/sm-imgs-adjustments/ILP-sos.html
@@ -296,7 +296,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">The Honourable [Secretary of State name]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x200/000000/FFFFFF.png" alt="Secretary of State name">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -309,7 +309,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">The Honourable [Secretary of State name]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x200/000000/FFFFFF.png" alt="Secretary of State name">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -322,7 +322,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">The Honourable [Secretary of State name]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x200/000000/FFFFFF.png" alt="Secretary of State name">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -335,7 +335,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">The Honourable [Secretary of State name]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x200/000000/FFFFFF.png" alt="Secretary of State name">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -348,7 +348,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">The Honourable [Secretary of State name]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x200/000000/FFFFFF.png" alt="Secretary of State name">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -366,7 +366,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">[Parliamentary secretary name]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x200/000000/FFFFFF.png" alt="Parliamentary secretary name">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -379,7 +379,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">[Parliamentary secretary name]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x200/000000/FFFFFF.png" alt="Parliamentary secretary name">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -392,7 +392,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">[Parliamentary secretary name]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x200/000000/FFFFFF.png" alt="Parliamentary secretary name">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -405,7 +405,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">[Parliamentary secretary name]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x200/000000/FFFFFF.png" alt="Parliamentary secretary name">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -418,7 +418,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">[Parliamentary secretary name]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x200/000000/FFFFFF.png" alt="Parliamentary secretary name">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -431,7 +431,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">[Parliamentary secretary name]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x200/000000/FFFFFF.png" alt="Parliamentary secretary name">
 				</div>
 				<div class="col-xs-12 col-md-7">
