--- a/jmtesting/ILP-secretaries-of-state/sm-imgs/ILP-sos-fr.html
+++ b/jmtesting/ILP-secretaries-of-state/sm-imgs/ILP-sos-fr.html
@@ -268,7 +268,7 @@
 					<h3><a href="#">L'honorable [prénom et nom de famille]</a></h3>
 				</div>
 				<div class="col-xs-12 col-md-5">
-					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="L'honorable [prénom et nom de famille">
+					<img src="https://dummyimage.com/200x200/000000/FFFFFF.png" alt="L'honorable [prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
 					<p>[Titre officiel du ministre]</p>
@@ -280,78 +280,26 @@
 <section class="gc-minister">
 	<h2>Secrétaire(s) d'État</h2>
 	<div class="row wb-eqht-grd">
-		<div class="col-xs-12 col-md-4">
+		<div class="col-xs-12 col-md-6">
 			<div class="row">
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">L'honorable [prénom et nom de famille]</a></h3>
 				</div>
 				<div class="col-xs-12 col-md-5">
-					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire d'État prénom et nom de famille">
+					<img src="https://dummyimage.com/200x200/000000/FFFFFF.png" alt="Secrétaire d'État prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
 					<p>[Titre officiel]</p>
 				</div>
 			</div>
 		</div>
-		<div class="col-xs-12 col-md-4">
+		<div class="col-xs-12 col-md-6">
 			<div class="row">
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">L'honorable [prénom et nom de famille]</a></h3>
 				</div>
 				<div class="col-xs-12 col-md-5">
-					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire d'État prénom et nom de famille">
-				</div>
-				<div class="col-xs-12 col-md-7">
-					<p>[Titre officiel]</p>
-				</div>
-			</div>
-		</div>
-		<div class="col-xs-12 col-md-4">
-			<div class="row">
-				<div class="col-xs-12 col-md-7 pull-right">
-					<h3><a href="#">L'honorable [prénom et nom de famille]</a></h3>
-				</div>
-				<div class="col-xs-12 col-md-5">
-					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire d'État prénom et nom de famille">
-				</div>
-				<div class="col-xs-12 col-md-7">
-					<p>[Titre officiel]</p>
-				</div>
-			</div>
-		</div>
-		<div class="col-xs-12 col-md-4">
-			<div class="row">
-				<div class="col-xs-12 col-md-7 pull-right">
-					<h3><a href="#">L'honorable [prénom et nom de famille]</a></h3>
-				</div>
-				<div class="col-xs-12 col-md-5">
-					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire d'État prénom et nom de famille">
-				</div>
-				<div class="col-xs-12 col-md-7">
-					<p>[Titre officiel]</p>
-				</div>
-			</div>
-		</div>
-		<div class="col-xs-12 col-md-4">
-			<div class="row">
-				<div class="col-xs-12 col-md-7 pull-right">
-					<h3><a href="#">L'honorable [prénom et nom de famille]</a></h3>
-				</div>
-				<div class="col-xs-12 col-md-5">
-					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire d'État prénom et nom de famille">
-				</div>
-				<div class="col-xs-12 col-md-7">
-					<p>[Titre officiel]</p>
-				</div>
-			</div>
-		</div>
-		<div class="col-xs-12 col-md-4">
-			<div class="row">
-				<div class="col-xs-12 col-md-7 pull-right">
-					<h3><a href="#">L'honorable [prénom et nom de famille]</a></h3>
-				</div>
-				<div class="col-xs-12 col-md-5">
-					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire d'État prénom et nom de famille">
+					<img src="https://dummyimage.com/200x200/000000/FFFFFF.png" alt="Secrétaire d'État prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
 					<p>[Titre officiel]</p>
@@ -361,80 +309,28 @@
 	</div>
 </section>
 <section class="gc-minister">
-	<h2> Secrétaire(s) parlementaire(s)</h2>
+	<h2> Secrétaire(s) parlementaire</h2>
 	<div class="row wb-eqht-grd">
-		<div class="col-xs-12 col-md-4">
+		<div class="col-xs-12 col-md-6">
 			<div class="row">
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">[Secrétaire parlementaire prénom et nom de famille]</a></h3>
 				</div>
 				<div class="col-xs-12 col-md-5">
-					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire parlementaire prénom et nom de famille">
+					<img src="https://dummyimage.com/200x200/000000/FFFFFF.png" alt="Secrétaire parlementaire prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
 					<p>[Titre officiel]</p>
 				</div>
 			</div>
 		</div>
-		<div class="col-xs-12 col-md-4">
+		<div class="col-xs-12 col-md-6">
 			<div class="row">
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">[Secrétaire parlementaire prénom et nom de famille]</a></h3>
 				</div>
 				<div class="col-xs-12 col-md-5">
-					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire parlementaire prénom et nom de famille">
-				</div>
-				<div class="col-xs-12 col-md-7">
-					<p>[Titre officiel]</p>
-				</div>
-			</div>
-		</div>
-		<div class="col-xs-12 col-md-4">
-			<div class="row">
-				<div class="col-xs-12 col-md-7 pull-right">
-					<h3><a href="#">[Secrétaire parlementaire prénom et nom de famille]</a></h3>
-				</div>
-				<div class="col-xs-12 col-md-5">
-					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire parlementaire prénom et nom de famille">
-				</div>
-				<div class="col-xs-12 col-md-7">
-					<p>[Titre officiel]</p>
-				</div>
-			</div>
-		</div>
-		<div class="col-xs-12 col-md-4">
-			<div class="row">
-				<div class="col-xs-12 col-md-7 pull-right">
-					<h3><a href="#">[Secrétaire parlementaire prénom et nom de famille]</a></h3>
-				</div>
-				<div class="col-xs-12 col-md-5">
-					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire parlementaire prénom et nom de famille">
-				</div>
-				<div class="col-xs-12 col-md-7">
-					<p>[Titre officiel]</p>
-				</div>
-			</div>
-		</div>
-		<div class="col-xs-12 col-md-4">
-			<div class="row">
-				<div class="col-xs-12 col-md-7 pull-right">
-					<h3><a href="#">[Secrétaire parlementaire prénom et nom de famille]</a></h3>
-				</div>
-				<div class="col-xs-12 col-md-5">
-					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire parlementaire prénom et nom de famille">
-				</div>
-				<div class="col-xs-12 col-md-7">
-					<p>[Titre officiel]</p>
-				</div>
-			</div>
-		</div>
-		<div class="col-xs-12 col-md-4">
-			<div class="row">
-				<div class="col-xs-12 col-md-7 pull-right">
-					<h3><a href="#">[Secrétaire parlementaire prénom et nom de famille]</a></h3>
-				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
-					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire parlementaire prénom et nom de famille">
+					<img src="https://dummyimage.com/200x200/000000/FFFFFF.png" alt="Secrétaire parlementaire prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
 					<p>[Titre officiel]</p>
