--- a/chelsey/design/breadcrumbs-01b.html
+++ b/chelsey/design/breadcrumbs-01b.html
@@ -1,8 +1,5 @@
 ---
 altLangPage: "#"
-breadcrumbs:
-  - title: Breadcrumbs pattern
-    link: "https://design.canada.ca/common-design-patterns/breadcrumb-trail.html"
 css:
 - https://design.canada.ca/css/split-h1.css
 - https://design.canada.ca/css/custom.css
@@ -11,12 +8,12 @@ date: 2023-02-24
 dateModified: 2023-02-24
 description: "Standard page with breadcrumbs"
 lang: en
-layout: without-h1
+layout: default
 pageclass: cnt-wdth-lmtd
 title: "Breadcrumb trail"
 ---
-<h1 property="name" id="wb-cont" dir="ltr"><span class="stacked"><span>Breadcrumb trail</span>: <span>Canada.ca design</span></span></h1>
-<p><span class="label label-danger">Mandatory on standard and campaign pages</span></p>
+<h1>Page not found</h1>
+<p><span class="label label-danger">404 error</span></p>
 <h4>Examples</h4>
 <p>Here are some examples for different locations on Canada.ca.</p>
 <h5>Services and information content<br>Theme pages, Institutional and organizational pages</h5>
