--- a/chelsey/design/breadcrumbs-01b.html
+++ b/chelsey/design/breadcrumbs-01b.html
@@ -10,9 +10,8 @@ description: "Standard page with breadcrumbs"
 lang: en
 layout: default
 pageclass: cnt-wdth-lmtd
-title: "Breadcrumb trail"
+title: "Page not found"
 ---
-<h1>Page not found</h1>
 <p><span class="label label-danger">404 error</span></p>
 <h4>Examples</h4>
 <p>Here are some examples for different locations on Canada.ca.</p>
