--- a/chelsey/design/breadcrumbs-01b.html
+++ b/chelsey/design/breadcrumbs-01b.html
@@ -13,104 +13,12 @@ pageclass: cnt-wdth-lmtd
 title: "Page not found"
 ---
 <p><span class="label label-danger">404 error</span></p>
-<h4>Examples</h4>
-<p>Here are some examples for different locations on Canada.ca.</p>
-<h5>Services and information content<br>Theme pages, Institutional and organizational pages</h5>
-<div class="row">
-<div class="col-md-8">
-<section class="panel panel-info">
-  <div class="panel-body">
-<p class="mrgn-tp-md">Canada.ca</p>
-  </div>
-</section>
-</div>
-</div>
-<h5>First level topic pages</h5>
-<div class="row">
-<div class="col-md-8">
-<section class="panel panel-info">
-  <div class="panel-body">
-<p class="mrgn-tp-md">Canada.ca   &#8250;   [Parent theme]</p>
-  </div>
-</section>
-</div>
-</div>
-<h5>Second-level topic pages</h5>
-<div class="row">
-<div class="col-md-8">
-<section class="panel panel-info">
-  <div class="panel-body">
-<p class="mrgn-tp-md">Canada.ca    &#8250;   [Parent theme]    &#8250;   [Parent topic]</p>
-  </div>
-</section>
-</div>
-</div>
-<h5>Destination content pages</h5>
-<div class="row">
-<div class="col-md-8">
-<section class="panel panel-info">
-  <div class="panel-body">
-<p class="mrgn-tp-md">Canada.ca    &#8250;   [Parent theme]    &#8250;   [Parent topic]   &#8250;  [Parent sub-topic]   &#8250;   [etc.]</p>
-  </div>
-</section>
-</div>
-</div>
-<h5>Corporate, program and policy content</h5>
-<div class="row">
-<div class="col-md-8">
-<section class="panel panel-info">
-  <div class="panel-body">
-<p class="mrgn-tp-md"><p>Canada.ca   &#8250;   [Institutional profile page]</p>
-  </div>
-</section>
-</div>
-</div>
-<h5>Partnering and collaborative arrangement profile pages</h5>
-<div class="row">
-<div class="col-md-8">
-<section class="panel panel-info">
-<div class="panel-body">
-<p>Canada.ca</p>
-  </div>
-</section>
-</div>
-</div>
-<h5>Search results pages</h5>
-<h6>Basic search pages</h6>
-<div class="row">
-<div class="col-md-8">
-<section class="panel panel-info">
-<div class="panel-body">
-  <p>Canada.ca</p>
-    </div>
-</section>
-</div>
-</div>
-<h6>Advanced search pages</h6>
-<div class="row">
-<div class="col-md-8">
-<section class="panel panel-info">
-<div class="panel-body"><p>Canada.ca   &#8250;   [Basic search]</p>
-      </div>
-</section>
-</div>
-</div>
-<h5>Campaigns and promotions</h5>
-<div class="row">
-<div class="col-md-8">
-<section class="panel panel-info">
-<div class="panel-body"><p>Promotion campaigns don't need a breadcrumb trail. If you add one, it can lead back to the topic tree, the Institutional/Organizational profile, or to the Home page of Canada.ca.</p>
-    </div>
-</section>
-</div>
-</div>
-  <h5>News</h5>
-<div class="row">
-<div class="col-md-8">
-<section class="panel panel-info">
-<div class="panel-body">
-  <p>Canada.ca   &#8250;   [Institutional profile page]</p>
-    </div>
-</section>
-</div>
-</div>
+<p>The page you are looking for may have been moved or deleted. If you typed the address yourself, check that it's correct.</p>
+<p>You may be looking for:</p>
+<ul>
+<li>Canada.ca home page</li>
+<li>Government of Canada contacts</li>
+<li>Government of Canada services</li>
+<li>Sign in to an account</li>
+<li>Visit or immigrate to Canada</li>
+</ul>
