--- a/chelsey/design/breadcrumbs-01b.html
+++ b/chelsey/design/breadcrumbs-01b.html
@@ -16,9 +16,9 @@ title: "Page not found"
 <p>The page you are looking for may have been moved or deleted. If you typed the address yourself, check that it's correct.</p>
 <p>You may be looking for:</p>
 <ul>
-<li>Canada.ca home page</li>
-<li>Government of Canada contacts</li>
-<li>Government of Canada services</li>
-<li>Sign in to an account</li>
-<li>Visit or immigrate to Canada</li>
+<li><a href="www.canada.ca">Canada.ca home page</a></li>
+<li><a href="www.canada.ca">Contact the Government of Canada</a></li>
+<li><a href="www.canada.ca">Government of Canada services</a></li>
+<li><a href="www.canada.ca">Sign in to an account</a></li>
+<li><a href="www.canada.ca">Visit or immigrate to Canada</a></li>
 </ul>
