--- a/chelsey/design/404_bilingual.html
+++ b/chelsey/design/404_bilingual.html
@@ -12,8 +12,7 @@ layout: default
 pageclass: cnt-wdth-lmtd
 title: "Page not found"
 ---
-<p><span class="label label-danger">404 error</span></p>
- <main property="mainContentOfPage" resource="#wb-main" class="container">
+<main property="mainContentOfPage" resource="#wb-main" class="container">
             <h1 id="wb-cont" class="wb-inv">Not Found</h1>
             <div class="row mrgn-tp-lg mrgn-bttm-lg">
                 <div class="col-md-12">
@@ -23,11 +22,10 @@ title: "Page not found"
                                 
                                 <div class="mwstext section"><div class="row"> 
  <div class="col-xs-3 col-sm-2 col-md-2 text-center mrgn-tp-md"> 
-  <span class="glyphicon glyphicon-warning-sign glyphicon-error"></span> 
  </div> 
  <div class="col-xs-9 col-sm-10 col-md-10"> 
-  <h2 class="mrgn-tp-md">We couldn't find that Web page</h2> 
-  <p class="pagetag"><b>Error 404</b></p> 
+  <h2 class="mrgn-tp-md">We couldn't find that Web page</h2>
+  <p><span class="label label-danger">404 error</span></p>
  </div> 
 </div> 
 <p>We're sorry you ended up here. Sometimes a page gets moved or deleted, but hopefully we can help you find what you're looking for. What next?</p> 
@@ -76,11 +74,11 @@ title: "Page not found"
                             	
                                 <div class="mwstext section"><div class="row"> 
  <div class="col-xs-3 col-sm-2 col-md-2 text-center mrgn-tp-md"> 
-  <span class="glyphicon glyphicon-warning-sign glyphicon-error"></span> 
  </div> 
  <div class="col-xs-9 col-sm-10 col-md-10"> 
   <h2 class="mrgn-tp-md">Nous ne pouvons trouver cette page Web</h2> 
-  <p class="pagetag"><b>Erreur 404</b></p> 
+<p><span class="label label-danger">Erreur 404</span></p>
+
  </div> 
 </div> 
 <p>Nous sommes désolés que vous ayez abouti ici. Il arrive parfois qu'une page ait été déplacée ou supprimée. Heureusement, nous pouvons vous aider à trouver ce que vous cherchez. Que faire?</p> 
