--- a/chelsey/design/404_bilingual.html
+++ b/chelsey/design/404_bilingual.html
@@ -28,11 +28,16 @@ title: "Page not found"
   <p><span class="label label-danger">404 error</span></p>
  </div> 
 </div> 
-<p>We're sorry you ended up here. Sometimes a page gets moved or deleted, but hopefully we can help you find what you're looking for. What next?</p> 
-<ul> 
- <li>Return to the <a href="/en.html">home page</a>;</li> 
- <li><a href="/en/contact.html">Contact us</a> and we'll help you out.</li> 
-</ul></div>
+<p>The page you are looking for may have been moved or deleted. If you typed the address yourself, check that it's correct.</p>
+<p>You may be looking for:</p>
+<ul>
+<li><a href="www.canada.ca">Canada.ca home page</a></li>
+<li><a href="www.canada.ca">Contact the Government of Canada</a></li>
+<li><a href="www.canada.ca">Government of Canada services</a></li>
+<li><a href="www.canada.ca">Sign in to an account</a></li>
+<li><a href="www.canada.ca">Visit or immigrate to Canada</a></li>
+</ul>
+</div>
 <div class="mwsmediaplayer section">
 
     <style>
@@ -81,11 +86,16 @@ title: "Page not found"
 
  </div> 
 </div> 
-<p>Nous sommes désolés que vous ayez abouti ici. Il arrive parfois qu'une page ait été déplacée ou supprimée. Heureusement, nous pouvons vous aider à trouver ce que vous cherchez. Que faire?</p> 
-<ul> 
- <li>Retournez à la <a href="/fr.html">page d'accueil</a>;</li> 
- <li><a href="/fr/contact/index.html">Communiquez avec nous</a> pour obtenir de l'aide.</li> 
-</ul></div>
+<p>La page que vous recherchez peut avoir été déplacée ou supprimée. Si vous avez tapé l’adresse (URL) vous-même, vérifiez qu’elle est correcte. Ne pas inclure de caractères français dans l’URL.</p>
+<p>Vous pouvez rechercher</p>
+<ul>
+<li><a href="www.canada.ca">Page d'accueil de Canada.ca</a></li>
+<li><a href="www.canada.ca">Contactez le gouvernment de Canada</a></li>
+<li><a href="www.canada.ca">Services du gouvernment de Canada</a></li>
+<li><a href="www.canada.ca">Se connecter à un dossier ou un compte en ligne</a></li>
+<li><a href="www.canada.ca">Visiter ou immigrer au Canada</a></li>
+</ul>
+</div>
 
 
                                 <section class="col-md-12">
