--- a/chelsey/design/404_bilingual.html
+++ b/chelsey/design/404_bilingual.html
@@ -24,7 +24,7 @@ title: "Page not found"
  <div class="col-xs-3 col-sm-2 col-md-2 text-center mrgn-tp-md"> 
  </div> 
  <div class="col-xs-9 col-sm-10 col-md-10"> 
-  <h2 class="mrgn-tp-md">We couldn't find that Web page</h2>
+  <h2 class="mrgn-tp-md">Page not found</h2>
   <p><span class="label label-danger">404 error</span></p>
  </div> 
 </div> 
