--- a/chelsey/design/404_bilingual.html
+++ b/chelsey/design/404_bilingual.html
@@ -25,7 +25,7 @@ pageclass: cnt-wdth-lmtd
   <p><span class="label label-danger">404 error</span></p>
  </div> 
 </div> 
-<p>The page you are looking for may have been moved or deleted. If you typed the address yourself, check that it's correct.</p>
+<p>The page you are looking for may have been moved or deleted. If you typed the address (URL) yourself, check that it's correct. Do not include special characters in the URL.</p>
 <p>You may be looking for:</p>
 <ul>
 <li><a href="www.canada.ca">Canada.ca home page</a></li>
