--- a/chelsey/design/404_bilingual.html
+++ b/chelsey/design/404_bilingual.html
@@ -76,7 +76,7 @@ pageclass: cnt-wdth-lmtd
                             	
                                 <div class="mwstext section"><div class="row"> 
  <div class="col-xs-9 col-sm-10 col-md-10"> 
-  <h2 class="mrgn-tp-md">Nous ne pouvons trouver cette page Web</h2> 
+  <h2 class="mrgn-tp-md">Page non trouvée</h2> 
 <p><span class="label label-danger">Erreur 404</span></p>
 
  </div> 
