--- a/chelsey/design/breadcrumbs-01b.html
+++ b/chelsey/design/breadcrumbs-01b.html
@@ -17,8 +17,10 @@ title: "Page not found"
 <p>You may be looking for:</p>
 <ul>
 <li><a href="www.canada.ca">Canada.ca home page</a></li>
-<li><a href="www.canada.ca">Contact the Government of Canada</a></li>
 <li><a href="www.canada.ca">Government of Canada services</a></li>
+<li><a href="www.canada.ca">Contact the Government of Canada</a></li>
 <li><a href="www.canada.ca">Sign in to an account</a></li>
+<li><a href="www.canada.ca">Benefits</a></li>
+<li><a href="www.canada.ca">Taxes</a></li>
 <li><a href="www.canada.ca">Visit or immigrate to Canada</a></li>
 </ul>
