--- a/chelsey/design/404_bilingual.html
+++ b/chelsey/design/404_bilingual.html
@@ -29,9 +29,11 @@ pageclass: cnt-wdth-lmtd
 <p>You may be looking for:</p>
 <ul>
 <li><a href="www.canada.ca">Canada.ca home page</a></li>
-<li><a href="www.canada.ca">Contact the Government of Canada</a></li>
 <li><a href="www.canada.ca">Government of Canada services</a></li>
+<li><a href="www.canada.ca">Contact the Government of Canada</a></li>
 <li><a href="www.canada.ca">Sign in to an account</a></li>
+<li><a href="www.canada.ca">Benefits</a></li>
+<li><a href="www.canada.ca">Taxes</a></li>
 <li><a href="www.canada.ca">Visit or immigrate to Canada</a></li>
 </ul>
 </div>
@@ -85,9 +87,11 @@ pageclass: cnt-wdth-lmtd
 <p>Vous pouvez rechercher</p>
 <ul>
 <li><a href="www.canada.ca">Page d'accueil de Canada.ca</a></li>
-<li><a href="www.canada.ca">Contactez le gouvernment de Canada</a></li>
 <li><a href="www.canada.ca">Services du gouvernment de Canada</a></li>
+<li><a href="www.canada.ca">Contactez le gouvernment de Canada</a></li>
 <li><a href="www.canada.ca">Se connecter à un dossier ou un compte en ligne</a></li>
+<li><a href="www.canada.ca">Prestations</a></li>
+<li><a href="www.canada.ca">Impôts</a></li>
 <li><a href="www.canada.ca">Visiter ou immigrer au Canada</a></li>
 </ul>
 </div>
