--- a/chelsey/design/404_bilingual.html
+++ b/chelsey/design/404_bilingual.html
@@ -46,31 +46,30 @@ pageclass: cnt-wdth-lmtd
 </style>
 
 </div>
-
-
                                 <section class="col-md-12">
-                                    <h3 class="wb-inv">Search</h3>
-                                    
-<form action="/en/sr/srb.html" method="get" name="cse-search-box" role="search" class="form-inline">
-<div class="form-group">
-<label for="wb-srch-q" class="wb-inv">Search website</label>
-<input name="cdn" value="canada" type="hidden">
-<input name="st" value="s" type="hidden">
-<input name="num" value="10" type="hidden">
-<input name="langs" value="eng" type="hidden">
-<input name="st1rt" value="0" type="hidden">
-<input name="s5bm3ts21rch" value="x" type="hidden">
-<input id="wb-srch-q" list="wb-srch-q-ac" class="wb-srch-q form-control" name="q" type="search" value="" size="27" maxlength="150" placeholder="Search Canada.ca">
-<datalist id="wb-srch-q-ac">
-</datalist>
-</div>
-<div class="form-group submit">
-<button type="submit" id="wb-srch-sub" class="btn btn-primary btn-small" name="wb-srch-sub"><span class="glyphicon-search glyphicon"></span><span class="wb-inv">Search</span></button>
+  <h3 class="wb-inv">Search</h3>
 
-</div>
-</form>
+  <form action="/en/sr/srb.html" method="get" name="cse-search-box" role="search" class="form-inline">
+    <input name="cdn" value="canada" type="hidden">
+    <input name="st" value="s" type="hidden">
+    <input name="num" value="10" type="hidden">
+    <input name="langs" value="eng" type="hidden">
+    <input name="st1rt" value="0" type="hidden">
+    <input name="s5bm3ts21rch" value="x" type="hidden">
 
-                                </section>
+    <div class="input-group">
+      <label for="wb-srch-q" class="wb-inv">Search website</label>
+      <input id="wb-srch-q" list="wb-srch-q-ac" class="wb-srch-q form-control" name="q" type="search" value="" size="27" maxlength="150" placeholder="Search Canada.ca">
+      <datalist id="wb-srch-q-ac"></datalist>
+      <span class="input-group-btn">
+        <button type="submit" id="wb-srch-sub" class="btn btn-primary btn-small" name="wb-srch-sub">
+          <span class="glyphicon glyphicon-search"></span>
+          <span class="wb-inv">Search</span>
+        </button>
+      </span>
+    </div>
+  </form>
+</section>
                             </div>
                         </section>
                         <section lang="fr">
