--- a/chelsey/design/404_bilingual.html
+++ b/chelsey/design/404_bilingual.html
@@ -26,7 +26,7 @@ pageclass: cnt-wdth-lmtd
   <p><span class="label label-danger">404 error</span></p>
  </div> 
 </div> 
-<p>The page you are looking for may have been moved or deleted. If you typed the address (URL) yourself, check that it's correct. Do not include special characters in the URL.</p>
+<p>The page you are looking for may have been moved or deleted. Check that the address (URL) is correct. Do not include special characters, replace accented letters with plain letters (for example, <strong>use:</strong> canada.ca/impots <strong>not:</strong> canada.ca/impôts).</p>
 <p>You may be looking for:</p>
 <ul>
 <li><a href="www.canada.ca">Canada.ca home page</a></li>
