--- a/chelsey/design/404_bilingual.html
+++ b/chelsey/design/404_bilingual.html
@@ -80,7 +80,7 @@ pageclass: cnt-wdth-lmtd
 
  </div> 
 </div> 
-<p>La page que vous recherchez peut avoir été déplacée ou supprimée. Si vous avez tapé l’adresse (URL) vous-même, vérifiez qu’elle est correcte. Ne pas inclure de caractères français dans l’URL.</p>
+<p>La page que vous recherchez peut avoir été déplacée ou supprimée. Vérifiez que l'adresse (URL) est correcte. N'utilisez pas de caractères spéciaux ; remplacez les lettres accentuées par des lettres normales (par exemple, <strong>utilisez :</strong> canada.ca/impots et <strong>non :</strong> canada.ca/impôts).</p>
 <p>Vous pouvez rechercher</p>
 <ul>
 <li><a href="www.canada.ca">Page d'accueil de Canada.ca</a></li>
