--- a/chelsey/design/404_bilingual.html
+++ b/chelsey/design/404_bilingual.html
@@ -20,7 +20,7 @@ pageclass: cnt-wdth-lmtd
                             <div class="col-md-6">
                                 
                                 <div class="mwstext section"><div class="row"> 
-<img src="chelsey/design/images/sig-blk-en.svg" alt="Government of Canada" property="logo">
+<img src="./images/sig-blk-en.svg" alt="Government of Canada" property="logo">
  <div class="col-xs-9 col-sm-10 col-md-10"> 
   <h2 class="mrgn-tp-md">Page not found</h2>
   <p><span class="label label-danger">404 error</span></p>
