--- a/chelsey/design/404_bilingual.html
+++ b/chelsey/design/404_bilingual.html
@@ -12,7 +12,7 @@ layout: default
 pageclass: cnt-wdth-lmtd
 ---
 <main property="mainContentOfPage" resource="#wb-main" class="container">
-            <h1 id="wb-cont" class="wb-inv">Not Found</h1>
+            <h1 id="wb-cont">Page not found / Page non trouvée</h1>
             <div class="row mrgn-tp-lg mrgn-bttm-lg">
                 <div class="col-md-12">
                     <div class="row">
