--- a/chelsey/design/404_bilingual.html
+++ b/chelsey/design/404_bilingual.html
@@ -24,7 +24,8 @@ pageclass: cnt-wdth-lmtd
   <p><span class="label label-danger">404 error</span></p>
  </div> 
 </div> 
-<p>The page you are looking for may have been moved or deleted. Check that the address (URL) is correct. Do not include special characters, replace accented letters with plain letters (for example, <strong>use:</strong> canada.ca/impots <strong>not:</strong> canada.ca/impôts).</p>
+<p>The page you are looking for may have been moved or deleted. Check that the address (URL) is correct.</p> 
+<p>Do not include special characters, replace accented letters with plain letters (for example, <strong>use:</strong> canada.ca/impots <strong>not:</strong> canada.ca/impôts).</p>
 <p>You may be looking for:</p>
 <ul>
 <li><a href="www.canada.ca">Canada.ca home page</a></li>
@@ -76,7 +77,8 @@ pageclass: cnt-wdth-lmtd
 <p><span class="label label-danger">Erreur 404</span></p>
  </div> 
 </div> 
-<p>La page que vous recherchez peut avoir été déplacée ou supprimée. Vérifiez que l'adresse (URL) est correcte. N'utilisez pas de caractères spéciaux ; remplacez les lettres accentuées par des lettres normales (par exemple, <strong>utilisez :</strong> canada.ca/impots et <strong>non :</strong> canada.ca/impôts).</p>
+<p>La page que vous recherchez peut avoir été déplacée ou supprimée. Vérifiez que l'adresse (URL) est correcte.</p> 
+<p>N'utilisez pas de caractères spéciaux ; remplacez les lettres accentuées par des lettres normales (par exemple, <strong>utilisez :</strong> canada.ca/impots et <strong>non :</strong> canada.ca/impôts).</p>
 <p>Vous pouvez rechercher</p>
 <ul>
 <li><a href="www.canada.ca">Page d'accueil de Canada.ca</a></li>
