--- a/chelsey/design/breadcrumbs-01b.html
+++ b/chelsey/design/breadcrumbs-01b.html
@@ -13,7 +13,8 @@ pageclass: cnt-wdth-lmtd
 title: "Page not found"
 ---
 <p><span class="label label-danger">404 error</span></p>
-<p>The page you are looking for may have been moved or deleted. Check that the address (URL) is correct. Do not include special characters, replace accented letters with plain letters (for example, <strong>use:</strong> canada.ca/impots <strong>not:</strong> canada.ca/impôts).</p>
+<p>The page you are looking for may have been moved or deleted. Check that the address (URL) is correct.</p> 
+<p>Do not include special characters, replace accented letters with plain letters (for example, <strong>use:</strong> canada.ca/impots <strong>not:</strong> canada.ca/impôts).</p>
 <p>You may be looking for:</p>
 <ul>
 <li><a href="www.canada.ca">Canada.ca home page</a></li>
