--- a/jmtesting/layered-theme-refinement/ly-features-3.html
+++ b/jmtesting/layered-theme-refinement/ly-features-3.html
@@ -212,39 +212,35 @@
 					</div>
 				</div>
 			</section>
+				<section class="gc-features mrgn-tp-lg">
+		<h2 class="wb-inv">Features</h2>
+		<div class="row wb-eqht-grd">
+			<div class="col-lg-4 col-sm-6 hght-inhrt">
+				<div class="well well-sm eqht-trgt wb-init wb-eqht-grd-inited hght-inhrt" id="wb-auto-5">
+					<img src="https://wet-boew.github.io/GCWeb/components/gc-features/img/feature-360x203.png" alt="">
+					<h3><a href="#" class="stretched-link">[Feature hyperlink text]</a></h3>
+					<p>Brief description of the feature being promoted. Brief description of the feature being promoted.</p>
+				</div>
+			</div>
+			<div class="col-lg-4 col-sm-6 hght-inhrt">
+				<div class="well well-sm eqht-trgt wb-init wb-eqht-grd-inited hght-inhrt" id="wb-auto-6">
+					<img src="https://wet-boew.github.io/GCWeb/components/gc-features/img/feature-360x203.png" alt="">
+					<h3><a href="#" class="stretched-link">[Feature hyperlink text]</a></h3>
+					<p>Brief description of the feature being promoted.</p>
+				</div>
+			</div>
+			<div class="col-lg-4 col-sm-6 hght-inhrt">
+				<div class="well well-sm eqht-trgt wb-init wb-eqht-grd-inited hght-inhrt" id="wb-auto-7">
+					<img src="https://wet-boew.github.io/GCWeb/components/gc-features/img/feature-360x203.png" alt="">
+					<h3><a href="#" class="stretched-link">[Feature hyperlink text]</a></h3>
+					<p>Brief description of the feature being promoted.</p>
+				</div>
+			</div>
 		</div>
 	</section>
-	
-
-<section class="gc-features" style="display:flex;">
-	<h2>Features</h2>
-	<div class="row wb-eqht-grd">
-		<div class="">
-			<div class="well well-sm eqht-trgt">
-				<img src="img/feature-360x203.png" alt="">
-				<h3><a href="#" class="stretched-link">[Feature hyperlink text]</a></h3>
-				<p>Brief description of the feature being promoted. Brief description of the feature being promoted.</p>
-			</div>
 		</div>
-		<div class="">
-			<div class="well well-sm eqht-trgt">
-				<img src="img/feature-360x203.png" alt="">
-				<h3><a href="#" class="stretched-link">[Feature hyperlink text]</a></h3>
-				<p>Brief description of the feature being promoted. Brief description of the feature being promoted.</p>
-			</div>
-		</div>
-		<div class="">
-			<div class="well well-sm eqht-trgt">
-				<img src="img/feature-360x203.png" alt="">
-				<h3><a href="#" class="stretched-link">[Feature hyperlink text]</a></h3>
-				<p>Brief description of the feature being promoted.</p>
-			</div>
-		</div>
-	</div>
-</section>
-
+	</section>
 </div>
-
 <section class="pagedetails container">
 	<h2 class="wb-inv">Page details</h2><dl id="wb-dtmd">
 	<dt>Date modified:</dt>
