--- a/jmtesting/layered-theme-refinement/ly-features-3-outside.html
+++ b/jmtesting/layered-theme-refinement/ly-features-3-outside.html
@@ -217,7 +217,7 @@
 </div>
 <div class="container">
 	<section class="gc-features" style="margin-bottom: -20px;">
-		<h2>Features</h2>
+		<h2 class="h3">Features</h2>
 		<div class="row wb-eqht-grd">
 			<div class="col-lg-4 col-sm-6 hght-inhrt">
 				<div class="well well-sm eqht-trgt wb-init wb-eqht-grd-inited hght-inhrt" id="wb-auto-5">
