--- a/chelsey/design/404_bilingual.html
+++ b/chelsey/design/404_bilingual.html
@@ -76,8 +76,8 @@ pageclass: cnt-wdth-lmtd
 <p><span class="label label-danger">Erreur 404</span></p>
  </div> 
 </div> 
-<p>La page que vous recherchez peut avoir été déplacée ou supprimée. Vérifiez que l'adresse (URL) est correcte.</p> 
-<p>N'utilisez pas de caractères spéciaux.
+<p>La page que vous recherchez peut avoir été déplacée ou supprimée. Vérifiez que l'adresse (URL) est correcte. N'utilisez pas de caractères spéciaux.</p> 
+                                            
 <p>Vous pouvez rechercher</p>
 <ul>
 <li><a href="www.canada.ca">Page d'accueil de Canada.ca</a></li>
