--- a/chelsey/design/404_bilingual.html
+++ b/chelsey/design/404_bilingual.html
@@ -23,7 +23,7 @@ pageclass: cnt-wdth-lmtd
   <p><span class="label label-danger">404 error</span></p>
  </div> 
 </div> 
-<p>The page you are looking for may have been moved or deleted. Check that the address (URL) is correct. Do not include special characters.</p> 
+<p>The page you're looking for may have been moved or deleted. Check that the address (URL) is correct. Do not include special characters.</p> 
 <p>You may be looking for:</p>
 <ul>
 <li><a href="www.canada.ca">Canada.ca home page</a></li>
